Name          : happstack-session
Version       : 7.0.0
License       : BSD3
Cabal-Version : >= 1.9.2
Build-Type    : Simple

Library
  GHC-Options     : -Wall
  HS-Source-Dirs  : src
  Exposed-Modules :
    Happstack.Server.Session.Client
    Happstack.Server.Session.ID
  Build-Depends   :
    base             == 4.*,
    bytestring       == 0.9.*,
    cereal           == 0.3.*,
    clientsession    == 0.7.*,
    happstack-server == 7.0.*,
    mtl              == 2.0.*,
    random           == 1.0.*,
    safecopy         == 0.6.*,
    uuid             == 1.2.*
